tests/fails/f29.t

terra foo()
    var a = 8
    return a(8)
end
foo()
